<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ddowney.vehilytics.activities.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorIcons"
            android:elevation="4dp"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            app:popupTheme="@style/PopupMenuStyle"
            app:title="Vehilytics"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_field_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/device_id_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_id_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/vehicle_manufacturer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_manufacturer_placeholder"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="@color/colorPrimaryText"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorSecondaryText"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_clicked_selector"
            android:text="@string/register_button_label"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
