<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ddowney.vehilytics.activities.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorIcons"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        app:popupTheme="@style/PopupMenuStyle"
        app:title="Vehilytics"/>

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteY="16dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_toolbar"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_field_placeholder"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryText"
        android:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_field_placeholder"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryText"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_clicked_selector"
        android:text="@string/login_button_label"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/login_separator"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        tools:ignore="PxUsage"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_separator"
        android:background="@drawable/button_clicked_selector"
        android:text="@string/register_button_label"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
